// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Sites End-to-End Tests when creating a dive site will create the new site and return the result 1`] = `
{
  "createdOn": "2024-01-10T16:48:14.408Z",
  "creator": {
    "memberSince": "2021-07-03T20:52:36.948Z",
    "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
    "username": "Vivianne43",
  },
  "depth": {
    "depth": 70,
    "unit": "ft",
  },
  "description": "Kinda tropical. Has fish.",
  "directions": "Just drive there.",
  "freeToDive": true,
  "gps": {
    "lat": 30.0865,
    "lon": -80.4473,
  },
  "id": "53648128-8269-4F9A-91C6-7C88DFB74B3D",
  "location": "In the Florida Keys",
  "name": "Test Dive Site",
  "shoreAccess": true,
}
`;

exports[`Dive Sites End-to-End Tests when creating a dive site will create the new site and return the result 2`] = `
{
  "__v": 0,
  "_id": "53648128-8269-4F9A-91C6-7C88DFB74B3D",
  "createdOn": 2024-01-10T16:48:14.408Z,
  "creator": "d7d0c010-c552-4264-80ae-61c5fd56c428",
  "depth": {
    "depth": 70,
    "unit": "ft",
  },
  "description": "Kinda tropical. Has fish.",
  "directions": "Just drive there.",
  "freeToDive": true,
  "gps": {
    "coordinates": [
      -80.4473,
      30.0865,
    ],
    "type": "Point",
  },
  "location": "In the Florida Keys",
  "name": "Test Dive Site",
  "reviews": [],
  "shoreAccess": true,
}
`;

exports[`Dive Sites End-to-End Tests when creating a dive site will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "description",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "depth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "location",
      ],
      "received": "boolean",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 90,
      "message": "Number must be less than or equal to 90",
      "path": [
        "gps",
        "lat",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "gps",
        "lon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received string",
      "path": [
        "freeToDive",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received number",
      "path": [
        "shoreAccess",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Dive Sites End-to-End Tests when getting a dive site will return the dive site 1`] = `
{
  "averageDifficulty": 4.25,
  "averageRating": 3.89,
  "createdOn": "2022-01-26T05:06:09.648Z",
  "creator": {
    "memberSince": "2017-11-11T03:46:51.362Z",
    "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
    "username": "Antonia.Purdy6",
  },
  "depth": {
    "depth": 3.94,
    "unit": "m",
  },
  "description": "Error soluta natus maiores consectetur quia molestias assumenda odio. Voluptate sed reiciendis odit suscipit libero ipsa.",
  "directions": "Rem repudiandae error ea aliquam voluptas velit dolorem et vero.",
  "freeToDive": true,
  "gps": {
    "lat": 26.21,
    "lon": -30.75,
  },
  "id": "d9c70155-d869-4656-8b86-e5784e7a56aa",
  "location": "Meriden San Marino",
  "name": "ignorant coyote",
  "shoreAccess": false,
  "updatedOn": "2022-06-05T20:10:03.493Z",
}
`;

exports[`Dive Sites End-to-End Tests when searching dive sites will list results from a basic search 1`] = `
{
  "sites": [
    {
      "averageDifficulty": 3.88,
      "averageRating": 4.96,
      "createdOn": "2021-06-13T14:23:35.687Z",
      "creator": {
        "memberSince": "2021-11-02T20:39:02.263Z",
        "userId": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
        "username": "Pietro.Tillman",
      },
      "depth": {
        "depth": 114.4,
        "unit": "ft",
      },
      "description": "Iure consequatur illum molestiae. Alias magni deserunt saepe facilis numquam reprehenderit corporis atque ipsam.",
      "directions": "Veritatis nesciunt possimus laborum quisquam officiis nostrum asperiores reiciendis.",
      "freeToDive": true,
      "gps": {
        "lat": -21.98,
        "lon": -110.74,
      },
      "id": "d9a2ee0d-1fde-411a-8808-faefdc4cb29d",
      "location": "Athens-Clarke County Liechtenstein",
      "name": "impure gavel",
      "shoreAccess": false,
      "updatedOn": "2020-11-26T14:50:50.727Z",
    },
    {
      "averageDifficulty": 3.8,
      "averageRating": 4.95,
      "createdOn": "2022-12-30T06:36:35.521Z",
      "creator": {
        "memberSince": "2021-07-03T20:52:36.948Z",
        "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
        "username": "Vivianne43",
      },
      "depth": {
        "depth": 11.31,
        "unit": "m",
      },
      "description": "Quia accusantium asperiores. Blanditiis deserunt voluptates temporibus.",
      "directions": "Voluptas doloremque asperiores iure architecto voluptate fugit commodi.",
      "freeToDive": false,
      "gps": {
        "lat": 12.6,
        "lon": -55.31,
      },
      "id": "3d49a4f1-8918-4b89-96dc-81db0ea99ed5",
      "location": "Anaheim Guadeloupe",
      "name": "concrete thing",
      "shoreAccess": true,
      "updatedOn": "2021-12-19T06:06:01.543Z",
    },
    {
      "averageDifficulty": 4.4,
      "averageRating": 4.93,
      "createdOn": "2017-11-10T20:27:25.268Z",
      "creator": {
        "memberSince": "2018-05-21T04:31:43.020Z",
        "userId": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
        "username": "Tillman30",
      },
      "depth": {
        "depth": 60.4,
        "unit": "ft",
      },
      "description": "Beatae voluptate incidunt dolorem autem qui. Incidunt eaque aspernatur corrupti maiores ea quis dicta libero molestias.",
      "directions": "Repellendus enim ratione molestias excepturi natus enim tempora sint repellat.",
      "freeToDive": true,
      "gps": {
        "lat": -49.25,
        "lon": -135.28,
      },
      "id": "d723ed3f-edde-4dbe-b9fc-dfa846ac0cc2",
      "location": "San Jose Guernsey",
      "name": "runny patio",
      "shoreAccess": true,
      "updatedOn": "2023-01-20T08:20:22.960Z",
    },
    {
      "averageDifficulty": 1.54,
      "averageRating": 4.91,
      "createdOn": "2020-08-24T23:45:29.318Z",
      "creator": {
        "memberSince": "2021-07-03T20:52:36.948Z",
        "userId": "d7d0c010-c552-4264-80ae-61c5fd56c428",
        "username": "Vivianne43",
      },
      "depth": {
        "depth": 35.84,
        "unit": "m",
      },
      "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
      "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
      "freeToDive": true,
      "gps": {
        "lat": 21.8,
        "lon": -7.65,
      },
      "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
      "location": "Rialto Marshall Islands",
      "name": "rundown handful",
      "shoreAccess": false,
      "updatedOn": "2021-06-13T03:32:10.180Z",
    },
    {
      "averageDifficulty": 4.35,
      "averageRating": 4.902,
      "createdOn": "2018-06-27T20:05:37.095Z",
      "creator": {
        "memberSince": "2020-09-25T22:21:02.836Z",
        "userId": "25793873-3413-4e78-aa6e-77717a7a23b8",
        "username": "Casimir_Reynolds11",
      },
      "depth": {
        "depth": 35.16,
        "unit": "m",
      },
      "description": "At perferendis repudiandae recusandae. Non totam ea molestias alias libero corporis quos repellendus culpa.",
      "directions": "Natus facilis nam iure in.",
      "freeToDive": true,
      "gps": {
        "lat": 66.65,
        "lon": 140.28,
      },
      "id": "6dbb141e-2cbd-4ac7-bdd9-ed54ff10623e",
      "location": "Cedar Park Denmark",
      "name": "each breath",
      "shoreAccess": true,
      "updatedOn": "2021-05-03T12:52:47.304Z",
    },
    {
      "averageDifficulty": 1.75,
      "averageRating": 4.9,
      "createdOn": "2019-09-23T18:38:25.929Z",
      "creator": {
        "memberSince": "2023-05-22T22:37:37.769Z",
        "userId": "d00fb87b-ad27-4666-91df-b3988ba763a6",
        "username": "Aglae31",
      },
      "depth": {
        "depth": 19.9,
        "unit": "m",
      },
      "description": "Suscipit eligendi provident minus saepe ipsum quod veniam placeat. Iure autem iure aliquid.",
      "directions": "Iste quo beatae suscipit deserunt eos.",
      "freeToDive": false,
      "gps": {
        "lat": -34.09,
        "lon": 115.05,
      },
      "id": "4a94192d-e3bb-4f5e-8ca0-7b8b01bca845",
      "location": "Canton Cote d'Ivoire",
      "name": "regal antechamber",
      "shoreAccess": false,
      "updatedOn": "2022-06-25T14:30:37.689Z",
    },
  ],
  "totalCount": 200,
}
`;

exports[`Dive Sites End-to-End Tests when searching dive sites will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 200,
      "message": "String must contain at most 200 character(s)",
      "path": [
        "query",
      ],
      "type": "string",
    },
    {
      "code": "custom",
      "message": "Must be in the format "<lat>,<lon>"",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "radius",
      ],
      "received": "nan",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'true' | 'false', received 'sure'",
      "options": [
        "true",
        "false",
      ],
      "path": [
        "freeToDive",
      ],
      "received": "sure",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'true' | 'false', received '13'",
      "options": [
        "true",
        "false",
      ],
      "path": [
        "shoreAccess",
      ],
      "received": "13",
    },
    {
      "code": "custom",
      "message": "Must be in the format "<min-rating>,<max-rating>"",
      "path": [
        "rating",
        "rating",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "rating",
        "rating",
      ],
    },
    {
      "code": "custom",
      "message": "Must be in the format "<min-rating>,<max-rating>"",
      "path": [
        "difficulty",
        "difficulty",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "difficulty",
        "difficulty",
      ],
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'name' | 'rating', received 'depth'",
      "options": [
        "name",
        "rating",
      ],
      "path": [
        "sortBy",
      ],
      "received": "depth",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'up'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "up",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
  ],
}
`;

exports[`Dive Sites End-to-End Tests when searching dive sites will return the results from a filtered search 1`] = `
{
  "sites": [
    {
      "averageDifficulty": 3.08,
      "averageRating": 2.09,
      "createdOn": "2023-03-06T19:37:13.765Z",
      "creator": {
        "memberSince": "2019-01-04T21:57:53.487Z",
        "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
        "username": "Lucious.Pagac",
      },
      "depth": {
        "depth": 23.09,
        "unit": "m",
      },
      "description": "Porro rem consectetur ipsa doloribus excepturi aperiam. Ducimus quas accusantium minus iure eum.",
      "directions": "Facere reiciendis porro eius doloremque vel quia repellendus.",
      "freeToDive": true,
      "gps": {
        "lat": -68.46,
        "lon": -35.98,
      },
      "id": "34f470da-60a5-4f02-86f9-a5a5744def8d",
      "location": "Toledo Panama",
      "name": "bad particular",
      "shoreAccess": true,
      "updatedOn": "2023-04-19T22:14:44.810Z",
    },
    {
      "averageDifficulty": 4.36,
      "averageRating": 1.7,
      "createdOn": "2018-06-04T17:55:25.518Z",
      "creator": {
        "memberSince": "2019-01-04T21:57:53.487Z",
        "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
        "username": "Lucious.Pagac",
      },
      "depth": {
        "depth": 37.3,
        "unit": "ft",
      },
      "description": "Itaque autem at labore voluptatem alias. Itaque cum autem vero nostrum.",
      "directions": "Illo iure fugiat mollitia placeat.",
      "freeToDive": true,
      "gps": {
        "lat": -6.7,
        "lon": -41.52,
      },
      "id": "01324c2b-7709-4161-b54d-5b84a3fae118",
      "location": "St. Petersburg Belize",
      "name": "glossy refusal",
      "shoreAccess": true,
      "updatedOn": "2022-01-04T08:23:58.287Z",
    },
    {
      "averageDifficulty": 4.87,
      "averageRating": 1.69,
      "createdOn": "2021-11-15T13:15:11.225Z",
      "creator": {
        "memberSince": "2019-01-04T21:57:53.487Z",
        "userId": "5c945b43-dcea-4e47-b66b-23e17536968c",
        "username": "Lucious.Pagac",
      },
      "depth": {
        "depth": 14.11,
        "unit": "m",
      },
      "description": "Aliquid nam quo accusantium. Ab cum corrupti labore.",
      "directions": "Rem fugit eos.",
      "freeToDive": true,
      "gps": {
        "lat": 35.22,
        "lon": 44.46,
      },
      "id": "3b6440b0-4190-432d-b086-c8a218b836cd",
      "location": "Pflugerville Aruba",
      "name": "soft brewer",
      "shoreAccess": true,
      "updatedOn": "2020-09-25T12:36:06.418Z",
    },
  ],
  "totalCount": 3,
}
`;

exports[`Dive Sites End-to-End Tests when updating a dive site will allow admins to update sites they did not create 1`] = `
{
  "averageDifficulty": 4.25,
  "averageRating": 3.89,
  "createdOn": "2022-01-26T05:06:09.648Z",
  "creator": {
    "memberSince": "2017-11-11T03:46:51.362Z",
    "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
    "username": "Antonia.Purdy6",
  },
  "depth": {
    "depth": 70,
    "unit": "ft",
  },
  "description": "Kinda tropical. Has fish.",
  "directions": "Just drive there.",
  "freeToDive": true,
  "gps": {
    "lat": 30.0865,
    "lon": -80.4473,
  },
  "id": "d9c70155-d869-4656-8b86-e5784e7a56aa",
  "location": "In the Florida Keys",
  "name": "Test Dive Site",
  "shoreAccess": true,
  "updatedOn": "2024-01-10T16:48:14.408Z",
}
`;

exports[`Dive Sites End-to-End Tests when updating a dive site will allow admins to update sites they did not create 2`] = `
{
  "__v": 0,
  "_id": "d9c70155-d869-4656-8b86-e5784e7a56aa",
  "averageDifficulty": 4.25,
  "averageRating": 3.89,
  "createdOn": 2022-01-26T05:06:09.648Z,
  "creator": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
  "depth": {
    "depth": 70,
    "unit": "ft",
  },
  "description": "Kinda tropical. Has fish.",
  "directions": "Just drive there.",
  "freeToDive": true,
  "gps": {
    "coordinates": [
      -80.4473,
      30.0865,
    ],
    "type": "Point",
  },
  "location": "In the Florida Keys",
  "name": "Test Dive Site",
  "reviews": [],
  "shoreAccess": true,
  "updatedOn": 2024-01-10T16:48:14.408Z,
}
`;

exports[`Dive Sites End-to-End Tests when updating a dive site will post updates to the site and return the result 1`] = `
{
  "averageDifficulty": 4.25,
  "averageRating": 3.89,
  "createdOn": "2022-01-26T05:06:09.648Z",
  "creator": {
    "memberSince": "2017-11-11T03:46:51.362Z",
    "userId": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
    "username": "Antonia.Purdy6",
  },
  "depth": {
    "depth": 70,
    "unit": "ft",
  },
  "description": "Kinda tropical. Has fish.",
  "directions": "Just drive there.",
  "freeToDive": true,
  "gps": {
    "lat": 30.0865,
    "lon": -80.4473,
  },
  "id": "d9c70155-d869-4656-8b86-e5784e7a56aa",
  "location": "In the Florida Keys",
  "name": "Test Dive Site",
  "shoreAccess": true,
  "updatedOn": "2024-01-10T16:48:14.408Z",
}
`;

exports[`Dive Sites End-to-End Tests when updating a dive site will post updates to the site and return the result 2`] = `
{
  "__v": 0,
  "_id": "d9c70155-d869-4656-8b86-e5784e7a56aa",
  "averageDifficulty": 4.25,
  "averageRating": 3.89,
  "createdOn": 2022-01-26T05:06:09.648Z,
  "creator": "7f8e1787-6c68-4554-a73f-d2f1395db89c",
  "depth": {
    "depth": 70,
    "unit": "ft",
  },
  "description": "Kinda tropical. Has fish.",
  "directions": "Just drive there.",
  "freeToDive": true,
  "gps": {
    "coordinates": [
      -80.4473,
      30.0865,
    ],
    "type": "Point",
  },
  "location": "In the Florida Keys",
  "name": "Test Dive Site",
  "reviews": [],
  "shoreAccess": true,
  "updatedOn": 2024-01-10T16:48:14.408Z,
}
`;

exports[`Dive Sites End-to-End Tests when updating a dive site will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "description",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "depth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "location",
      ],
      "received": "boolean",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 90,
      "message": "Number must be less than or equal to 90",
      "path": [
        "gps",
        "lat",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "gps",
        "lon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received string",
      "path": [
        "freeToDive",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "boolean",
      "message": "Expected boolean, received number",
      "path": [
        "shoreAccess",
      ],
      "received": "number",
    },
  ],
}
`;
